<resources>
    <string name="google_maps_key">AIzaSyBcThzj-yRMLc8NkNP4ZwjiG163hOzRNII</string>


    <string name="app_name">Sheltr</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to welcome, login, and register -->
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter">Enter</string>
    <string name="cancel">Cancel</string>
    <string name="user_type">User Type</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="content_description">An image of our logo</string>
    <string name="member">Not a Member?</string>
    <string name="already_member">Already a Member?</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to main activity -->
    <string name="refresh">REFRESH</string>
    <string name="logout">Logout</string>
    <string name="filter">FILTER</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="newborn">Newborn</string>
    <string name="child">Child</string>
    <string name="young_adult">Young Adult</string>
    <string name="search_by_keyword">Search by keyword</string>
    <string name="done">DONE</string>

    <!-- Strings related to shelter details activity -->
    <string name="reserve_spot">RESERVE SPOT</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="exit">x</string>
    <string name="new_shelter">New Shelter Available</string>
    <string name="new_shelter_text">A new shelter has been made available on Sheltr!</string>
    <string name="men">MEN</string>
    <string name="women">WOMEN</string>
    <string name="newborn_2">NEWBORN</string>
    <string name="beds">Number of beds?</string>

    <string-array name="user_types">
        <item>Standard User</item>
        <item>Shelter Employee</item>
        <item>Administrator</item>
    </string-array>
    <string-array name="filter_array">
        <item>Age</item>
        <item>Gender</item>
        <item>Name</item>
    </string-array>
</resources>
