<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/gradient_background"

    tools:context="edu.gatech.pistolpropulsion.homesforall.Controllers.RegisterActivity">

    <EditText
        android:id="@+id/editText_register_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="365dp"
        android:layout_marginStart="120dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:layout_marginStart="120dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_register_registerHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:text="@string/register"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/editText_register_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_register_enterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="148dp"
        android:layout_marginEnd="108dp"
        android:layout_marginStart="8dp"
        android:text="@string/enter"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_register_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="373dp"
        android:layout_marginStart="24dp"
        android:text="@string/email"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="308dp"
        android:layout_marginStart="24dp"
        android:text="@string/password"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_register_cancelButton"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="148dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="108dp"
        android:text="@string/cancel"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="#ffeeee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/user_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:layout_marginStart="24dp"
        android:text="@string/user_type"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
